# lethal-company-companion

./: .pre-commit-config.yaml  LICENSE  README.md  justfile  macro_lethal_company_flash.py  pyproject.toml
src/lcc/: cli.py  gui.py
src/lethal_company_companion/: __main__.py  cli.py
