[project]
name = "lethal_company_companion"
version = "0.0.2"
description = "A companion app for the Lethal Company game."
authors = [
    { name = "Kyle L. Davis", email = "aceofspades5757.github@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
# TODO: It may be a good idea to split dependencies based on CLI or GUI
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#dependencies-and-requirements
dependencies = [
    "keyboard",
    # CLI
    "typer[all]",
    # GUI
    "PySide6",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mypy",
]

[project.scripts]
lcc = "lcc.cli:app"

[project.gui-scripts]
lcc-gui = "lcc.gui:app"
