[project]
name = "lethal_company_companion"
version = "0.0.3"
description = "A companion app for the Lethal Company game."
authors = [
    { name = "Kyle L. Davis", email = "aceofspades5757.github@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
# TODO: It may be a good idea to split dependencies based on CLI or GUI
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#dependencies-and-requirements
dependencies = [
    "keyboard",
    # CLI
    "typer[all]",
    # GUI
    "PySide6",
]
keywords = [
    "lethal company",
    "companion",
    "macro",
    "key macro",
    "game",
    "cli",
    "gui",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",  # Gamers
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mypy",
]

[project.scripts]
lcc = "lcc.cli:app"

[project.gui-scripts]
lcc-gui = "lcc.gui:app"
